Arreglos visuales, lógica del crupier y sistema de apuestas